--- a/frontend/web/css/custom.css
+++ b/frontend/web/css/custom.css
@@ -79,3 +79,20 @@ div.form select.error
 	font-style: italic;
 	font-size:12px
 }
+
+.field-loginform-rememberme {
+	margin-left: -20px !important;
+	padding-left: -20px !important;
+}
+
+.help-block-error {
+	color: red !important;
+}
+.alert {
+    text-align: center !important;
+}
+
+.help-block {
+	font-size: 12px;
+	color: grey;
+}
